--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <title>Schwarzer Hintergrund</title>
   </head>
   <body bgcolor="#000000" style="background-color: #000000;">
+    <div style="color: #620000;">Testseite</div>
   </body>
 </html>
