--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="http://lernprojekte.github.io/Darstellungsregeln/Bildschirmausgabe.css" />
-	<link rel="stylesheet" href="http://lernprojekte.github.io/Darstellungsregeln/Druckerausgabe.css" />
+	<link rel="stylesheet" href="https://lernprojekte.github.io/Darstellungsregeln/Bildschirmausgabe.css" />
+	<link rel="stylesheet" href="https://lernprojekte.github.io/Darstellungsregeln/Druckerausgabe.css" />
     <title>Dokumentation eines Übungsprojektes</title>
 </head>
 <body>
