--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../Darstellungsregeln/_Medium_Allgemein.css" />
+    <link rel="stylesheet" type="text/css" href="https://lernprojekte.github.io/Darstellungsregeln/-Medium_Allgemein.css" />
     <link rel="stylesheet" type="text/css" href="../Darstellungsregeln/_Medium_Bildschirm_gs.css" />
     <link rel="stylesheet" type="text/css" href="../Darstellungsregeln/_Medium_Bildschirm_gw.css" />
     <link rel="stylesheet" type="text/css" href="../Darstellungsregeln/_Medium_Bildschirm_ks.css" />
