--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <h1>Dokumentation des Lern- und Übungsprojektes „Mep“</h1>
-	  
+  
     <h2>Einleitung</h2>
-	  
+
     <p>Das „Mep“, dessen Name als Akronym für „Modular erweiterbares Pionierprojekt“ stehen soll, ist ein sich selbst erklärendes Lern- und Übungsprojekt, das folgende Ziele verfolgt:<ul>
       <li>Es soll das Lernen unterstützen, indem es verschiedene Denkansätze, Methoden und Strategien, die hilfreich sind, um Programmierprojekte erfolgreich zu realisieren, präsentiert, erklärt und durch Beispiele veranschaulicht.</li>
       <li>Es soll selbst alle Phasen der Entwicklung von Programmierprojekten durchlaufen und, sich selbst als Beispiel nehmend, veranschaulichen, erklären und dokumentieren, wie man bei der Planung und Entwicklung von Projekten von Beginn an systematisch und strukturiert vorgehen kann. Daher ist diese Dokumentation selbst ein essentieller Bestandteil des Projekts.</li>
@@ -28,11 +28,42 @@
     </ul>Daher begleitet und beschreibt diese Ausarbeitung die Evolution des Übungsprojektes „Mep“ stets parallel zu dessen Entwicklung, kontinuierlich, beginnend mit den ersten Überlegungen, bis hin zum jeweils aktuellen Entwicklungsstand.</p>
 
     <p>Beginnend mit diesen anfänglichen Überlegungen, soll, neben der oben genannten Absicht, zum Lernerfolg beizutragen und die Entwicklung neuer Fähigkeiten zu fördern, nun auch ein konkretes, praktisches Ziel formuliert werden. Dieses soll, seinem Namen gerecht werdend, ein Programm sein, das die Fähigkeit besitzt, während seiner Laufzeit neue Module oder Bibliotheken zu laden, diese auszuführen, zu steuern und auch wieder zu beenden und aus dem Programmspeicher freizugeben.</p>
-  
+
     <p>Zur Übung und zur Verbesserung des Verständnisses soll hierfür von Grund auf ein neues Projekt erschaffen und nicht auf möglicherweise bereits existierende Vorlagen aufgebaut werden. Parallel zum Hauptprogramm soll eine Modulvorlage entworfen werden, aufbauend auf der anschließend ergänzende Erweiterungsmodule entwickelt werden können. Durch diese soll das Hauptprogramm um bestimmte Funktionalitäten und Testszenarien erweitert werden können und somit zu einer Art Spielplatz für Programmierexperimente werden. So können neue Ideen getestet werden, bevor sie in andere Projekte integriert werden</p>
-  
+
     <p>Ausgehend von diesen Überlegungen soll im nächsten Kapitel ein Gesamtkonzept ausgearbeitet werden, das Schritt für Schritt beschreibt, wie dieses Ziel realisiert werden soll. Zum Konzept gehören auch Nachforschungen nach Abhängigkeiten und notwendigen Voraussetzungen, die vor der Umsetzung berücksichtigt werden müssen. Die Umsetzung soll mit C++ erfolgen. Dabei sollen Unterschiede zwischen Windows und Linux sowie Visual Studio und gcc berücksichtigt werden, sodass das fertiggestellte Projekt sowohl unter Windows als auch unter Linux kompiliert und ausgeführt werden kann. Diese Ausarbeitung wird mit HTML, CSS und JavaScript erstellt und gemeinsam mit den anderen Dateien des Projekts über die Internetseite des extra hierfür erzeugten github-Projekts veröffentlicht. In dieser Ausarbeitung soll auch auf tiefergreifende Überlegungen und Erklärungen von und Begründungen für Entscheidungen eingegangen werden. Dabei soll nicht nur erläutert werden, warum bestimmte Dinge funktionieren, sondern auch, warum andere Ansätze nicht zum gewünschten Ziel führen.</p>
-  
+
     <p>Dieses Projekt dient zunächst der eigenen Weiterentwicklung und meiner Hoffnung, mir mit dieser Herangehensweise  ein tiefgreifendes Verständnis der Programmierung mit C und C++ unter Windows und Linux anzueignen. Zur Zielgruppe dieser Ausarbeitung gehören alle, die mich auf diesem Wege begleiten wollen oder die interessiert sind, sich auf ähnlichem Wege in die Programmierung einzuarbeiten.</p>
+
+    <h1>Bildschirmabmessungen</h1>
+    <p name="Bildschirmabmessungen">
+    <script>
+      // Informationen über den Bildschirm
+      var screenWidth = window.screen.width;
+      var screenHeight = window.screen.height;
+
+      // Informationen über das Browserfenster
+      var windowWidth = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+      var windowHeight = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
+
+      // Informationen über den sichtbaren Bereich der Webseite
+      var viewportWidth = document.documentElement.clientWidth;
+      var viewportHeight = document.documentElement.clientHeight;
+
+      // Ausgabe der Informationen
+      console.log("Bildschirmbreite: " + screenWidth + " Pixel");
+      console.log("Bildschirmhöhe: " + screenHeight + " Pixel");
+      console.log("Browserfensterbreite: " + windowWidth + " Pixel");
+      console.log("Browserfensterhöhe: " + windowHeight + " Pixel");
+      console.log("Viewport-Breite: " + viewportWidth + " Pixel");
+      console.log("Viewport-Höhe: " + viewportHeight + " Pixel");
+      document.write("Bildschirmbreite: " + screenWidth + " Pixel");
+      document.write("Bildschirmhöhe: " + screenHeight + " Pixel");
+      document.write("Browserfensterbreite: " + windowWidth + " Pixel");
+      document.write("Browserfensterhöhe: " + windowHeight + " Pixel");
+      document.write("Viewport-Breite: " + viewportWidth + " Pixel");
+      document.write("Viewport-Höhe: " + viewportHeight + " Pixel");
+    </script>
+    </p>
   </body>
 </html>
