--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <li>Es soll auch gezielt darauf eingegangen werden, wie Quelltexte zwischen ihrer Entwicklung und ihrer Freigabe sinnvoll analysiert und getestet und deren Funktionsweisen auf Fehlerfreiheit überprüft werden können. Daher sollen auch für dieses Projekt bereits während dessen Entwicklung Auswertungen und Selbsttests erstellt werden.</li>
       <li>Nach dem Erreichen der Hauptziele des Projekts sollen auch der Betrieb, die Wartung und die Weiterentwicklung diskutiert und dokumentiert werden.</li>
       <li>Idealerweise kann dieses Übungsprojekt in Zukunft die Grundlage für Neuentwicklungen und Folgeprojekte sein, in die die Erkenntnisse und Errungenschaften dieses Übungsprojekts bereits von Beginn an mit Weitsicht einfließen können.</li>
-    </ul>Daher begleitet und beschreibt diese Ausarbeitung die Evolution des Übungsprojektes „Mep“ stets parallel zu dessen Entwicklung, kontinuierlich, beginnend mit den ersten Überlegungen, bis hin zum jeweils aktuellen Entwicklungsstand.</p>
+    </ul></p>
+    
+    <p>Daher begleitet und beschreibt diese Ausarbeitung die Evolution des Übungsprojektes „Mep“ stets parallel zu dessen Entwicklung, kontinuierlich, beginnend mit den ersten Überlegungen, bis hin zum jeweils aktuellen Entwicklungsstand.</p>
 
     <p>Beginnend mit diesen anfänglichen Überlegungen, soll, neben der oben genannten Absicht, zum Lernerfolg beizutragen und die Entwicklung neuer Fähigkeiten zu fördern, nun auch ein konkretes, praktisches Ziel formuliert werden. Dieses soll, seinem Namen gerecht werdend, ein Programm sein, das die Fähigkeit besitzt, während seiner Laufzeit neue Module oder Bibliotheken zu laden, diese auszuführen, zu steuern und auch wieder zu beenden und aus dem Programmspeicher freizugeben.</p>
 
