--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 
 
   <div id="Fußzeile">
-    <div class="klein">Alle Projekte:</div>
-    <div id="Projektliste"></div>
+    <div>Alle Projekte:</div>
   </div>
 </body>
 </html>
